# libviso2-python

./: .gitignore  CMakeLists.txt  README.md  atlasbuggy_test.py  calibrate_camera.py  common.py  compile.sh  test_atlasbuggy.py  test_pylibviso2.py  test_stablizer.py
pylibviso2/: node.py  stablize_video.py  viso2.py  viso2_node.py  viso_kalman.py
src/libviso2/: filter.cpp  matcher.cpp  viso.cpp  viso_mono.cpp
src/pylibviso2/: pylibviso2.cpp  viso_mono_wrapper.cpp  viso_mono_wrapper.h
